03-site-to-site-vpn/vpc-onprem-west.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Simulated on-prem Site 2 (us-west-2) - 10.3.0.0/16

Parameters:
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: EC2 key pair for SSH access
  MyIPAddress:
    Type: String
    Description: Your public IP in CIDR format (e.g. 1.2.3.4/32)

Resources:

  # --- VPC ---
  VPCOnPremWest:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.3.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: vpc-onprem-west

  # --- Internet Gateway ---
  IGWOnPremWest:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw-onprem-west

  AttachIGWOnPremWest:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCOnPremWest
      InternetGatewayId: !Ref IGWOnPremWest

  # --- Public Subnet ---
  PublicSubnetOnPremWest:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCOnPremWest
      CidrBlock: 10.3.1.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: public-subnet-onprem-west

  # --- Route Table ---
  RTOnPremWest:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCOnPremWest
      Tags:
        - Key: Name
          Value: rt-onprem-west

  RouteOnPremWest:
    Type: AWS::EC2::Route
    DependsOn: AttachIGWOnPremWest
    Properties:
      RouteTableId: !Ref RTOnPremWest
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGWOnPremWest

  SubnetRTAssocOnPremWest:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOnPremWest
      RouteTableId: !Ref RTOnPremWest

  # --- Security Group ---
  SGOnPremWest:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and IPSec traffic
      VpcId: !Ref VPCOnPremWest
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIPAddress
        - IpProtocol: udp
          FromPort: 500
          ToPort: 500
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 4500
          ToPort: 4500
          CidrIp: 0.0.0.0/0
        - IpProtocol: 50
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
      Tags:
        - Key: Name
          Value: sg-onprem-west

  # --- Strongswan EC2 (Customer Gateway) ---
  StrongswanWest:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyPairName
      SubnetId: !Ref PublicSubnetOnPremWest
      SecurityGroupIds:
        - !Ref SGOnPremWest
      SourceDestCheck: false
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}'
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y strongswan
          echo "net.ipv4.ip_forward = 1" >> /etc/sysctl.conf
          sysctl -p
      Tags:
        - Key: Name
          Value: strongswan-onprem-west

  # --- Elastic IP ---
  EIPOnPremWest:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref StrongswanWest
      Tags:
        - Key: Name
          Value: eip-onprem-west

Outputs:
  VPCOnPremWestId:
    Value: !Ref VPCOnPremWest
    Description: On-prem West VPC ID
  StrongswanWestPublicIP:
    Value: !Ref EIPOnPremWest
    Description: Public IP of Strongswan instance (use as Customer Gateway IP)
  StrongswanWestInstanceId:
    Value: !Ref StrongswanWest
    Description: Strongswan instance ID
